2020-12-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pict.c (ReadPICTImage): Use managed memory allocators.
	(WritePICTImage): Use managed memory allocators.

	* magick/memory.c (_MagickReallocateResourceLimitedMemory): Add a
	'clear' parameter which indicates that freshly allocated memory
	should be zeroed.  Added "Cleared" versions of the private managed
	memory macros and updated all managed memory macros to exclusively
	use this function.

2020-12-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Update Automake to 1.16.3 and bootstrap to pick up latest
	config.guess and config.sub.

2020-12-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ImportRLEPixels): Change from C assertion to
	exception report.  Fixes oss-fuzz 28703 "ASSERT · ((quantum_type
	== IndexQuantum) && (image->storage_class ...".
	(ReadMIFFImage): Read Gray DirectClass image as PseudoClass so it
	has a colormap, and we have a RLE decode implementation for it.

2020-12-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/paint.c (OpaqueImage): Changing the image storage class
	is not required.

2020-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/paint.c (OpaqueImage): Assure that image type is promoted
	as required based on fill color.  Fixes unexpected results
	discovered by Stuart McDonagh and reported via the
	graphicsmagick-help mailing list on December 14, 2020.

2020-12-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Set '[MVG]' image attribute at
	appropriate places outside of DrawImage() since DrawImage()
	sometimes recurses into itself, trashing the image attribute.  One
	example of recursion is in the text annotation code.

	* coders/svg.c (ReadSVGImage): Properly support 'ping' mode so
	'identify' works as expected.

	* magick/render.c (InsertAttributeIntoInputStream): Provide a more
	useful diagnostic for when a "use" or "class" argument id is not
	defined.
