@@ -38,6 +38,7 @@
 <p>2020-12-20  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/mac.c (ReadMACImage): Use managed memory allocators.</li>
 <li>coders/pict.c (ReadPICTImage): Use managed memory allocators.
 (WritePICTImage): Use managed memory allocators.</li>
 <li>magick/memory.c (_MagickReallocateResourceLimitedMemory): Add a
